# Actonymous

./: .gitignore  README.md  docker-compose.yml
APIs/Actonymous/: Actonymous.sln
APIs/Actonymous/Actonymous.API.DocsPackagerStorage/: Dockerfile
APIs/Actonymous/Actonymous.API.DocsPackagerStorage/Properties/: launchSettings.json
APIs/Actonymous/Actonymous.API.DocsPackagerStorage/Services/: DocsPackagerService.cs
APIs/Actonymous/Actonymous.API.DocsRenderer/: Actonymous.API.DocsRenderer.csproj  Dockerfile  Program.cs
APIs/Actonymous/Actonymous.API.DocsRenderer/Properties/: launchSettings.json
APIs/Actonymous/Actonymous.API.DocsRenderer/Services/: Tex2PdfRenderService.cs
APIs/Actonymous/Actonymous.API.Gateway/: Actonymous.API.Gateway.csproj  Dockerfile  Program.cs  Startup.DI.cs
APIs/Actonymous/Actonymous.API.Gateway.Report.ReportGeneration/: Actonymous.API.Gateway.Report.ReportGeneration.csproj
APIs/Actonymous/Actonymous.API.Gateway.Report.ReportGeneration/APIs/: Mutation.cs  Query.cs  Subscription.cs
APIs/Actonymous/Actonymous.API.Gateway.Report.ReportGeneration/DTOs/: GeneratedReportDto.cs  (+1 more)
APIs/Actonymous/Actonymous.API.Gateway.Settings.ExportReport/: Actonymous.API.Gateway.Settings.ExportReport.csproj  ProductsSynchronizationQuery.cs
APIs/Actonymous/Actonymous.API.Gateway.Settings.ExportReport.DAL/: Actonymous.API.Gateway.Settings.ExportReport.DAL.csproj  AppDbContext.cs
APIs/Actonymous/Actonymous.API.Gateway.Settings.ExportReport.Domain/: Actonymous.API.Gateway.Settings.ExportReport.Domain.csproj
APIs/Actonymous/Actonymous.API.Gateway.Shared/: Actonymous.API.Gateway.Shared.csproj
APIs/Actonymous/Actonymous.API.ReportGenerationSaga/: Actonymous.API.ReportGenerationSaga.csproj  Dockerfile  Program.cs  Startup.DI.cs
APIs/Actonymous/Actonymous.API.ReportGenerationSaga.PublicDTOs/: Actonymous.API.ReportGenerationSaga.PublicDTOs.csproj
APIs/Actonymous/Actonymous.API.ReportSettingsExporter/: Actonymous.API.ReportSettingsExporter.csproj  Dockerfile  Program.cs
APIs/Actonymous/Actonymous.API.ReportSettingsExporter.DAL/: Actonymous.API.ReportSettingsExporter.DAL.csproj  AppDbContext.cs
APIs/Actonymous/Actonymous.API.ReportSettingsExporter.Domain/: Actonymous.API.ReportSettingsExporter.Domain.csproj
APIs/Actonymous/Actonymous.API.ReportSettingsExporter.Migrations/: Actonymous.API.ReportSettingsExporter.Migrations.csproj  Class1.cs  Migration.cs  MigrationInit.cs  README.md
APIs/Actonymous/Actonymous.Core.DAL/: Actonymous.Core.DAL.csproj
APIs/Actonymous/Actonymous.Core.Module/: Actonymous.Core.Module.csproj
APIs/Actonymous/Actonymous.Core.Protos/: Actonymous.Core.Protos.csproj
APIs/Actonymous/Actonymous.Core.Tests/: Actonymous.Core.Tests.csproj
APIs/DocsReporter/: Dockerfile  README.md  pyproject.toml
APIs/DocsReporter/docs-reporter-domain/: LICENSE.txt  README.md  pyproject.toml
APIs/DocsReporter/docs-reporter-domain/docs_reporter_domain/: __init__.py  act_data_formatter.py  task_data_formatter.py  tex_dtos.py  text_helpers.py
APIs/DocsReporter/docs-reporter-domain/docs_reporter_domain/DTOs/: __init__.py  jira_dtos.py  template_dtos.py  tex_dtos.py
APIs/DocsReporter/docs-reporter-domain/docs_reporter_domain/formatters/: __init__.py  tex_helpers.py
APIs/DocsReporter/docs-reporter-domain/docs_reporter_domain/formatters/act_formatter/: __init__.py  act_data_formatter.py  act_dtos.py
APIs/DocsReporter/docs-reporter-domain/docs_reporter_domain/formatters/task_formatter/: __init__.py  task_data_formatter.py  task_dtos.py
APIs/DocsReporter/docs-reporter-domain/docs_reporter_domain/word_declension/: __init__.py  cost_declension.py  fullname_declension.py  month_declension.py
APIs/DocsReporter/docs_reporter/: __about__.py  __main__.py  formatting_report_data.py
APIs/JiraWorklogManager/: Dockerfile  README.md  jira_dtos.py  jira_helpers.py  jira_worklog_manager.ipynb  main.py  pyproject.toml
APIs/JiraWorklogManager/domain/: jira_dtos.py  jira_helpers.py
APIs/JiraWorklogManager/jira-worklog-manager-domain/: README.md  pyproject.toml
APIs/JiraWorklogManager/jira-worklog-manager-domain/jira_worklog_manager_domain/: __init__.py  jira_dtos.py  jira_helpers.py
APIs/JiraWorklogManager/jira-worklog-manager-domain/tests/: __init__.py
APIs/JiraWorklogManager/jira_worklog_manager/: __main__.py
APIs/JiraWorklogManager/jira_worklog_manager/services/: jira_worklog_manager.py
APIs/JiraWorklogManager/notebook/: jira_dtos.py  jira_helpers.py  jira_worklog_manager.ipynb  pdf_generator_from_tex.ipynb  pdf_latex.ipynb
APIs/JiraWorklogManager/notebook/generated_tex/: task.tex
APIs/JiraWorklogManager/notebook/templates/: act.jinja  task.jinja
APIs/Notebooks/: jira_tasks_reporter.ipynb  jira_tasks_reporter_domain.py  jira_worklog_manager.ipynb  main.py  pdf_latex.ipynb
Configs/Database/: init_db.sql
Configs/Envs/: dev.env
frontend/actonymous/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend/actonymous/src/: index.html  styles.scss
protos/API/: docs_packager.proto  docs_reporter.proto  jira_worklog_manager.proto  report_settings_exporter.proto  tex2pdf_renderer.proto
(+144 files in other folders)
