[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docs-reporter-domain"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Gregory", email = "lobster287@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jinja2>=3.1.2",
  "requests>=2.28.1"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/docs-reporter-domain#readme"
Issues = "https://github.com/unknown/docs-reporter-domain/issues"
Source = "https://github.com/unknown/docs-reporter-domain"

[tool.hatch.version]
path = "docs_reporter_domain/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=docs_reporter_domain --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "docs_reporter_domain/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
