[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-worklog-manager-domain"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Gregory", email = "lobster287@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jira>=3.4.0"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/jira-worklog-manager-domain#readme"
Issues = "https://github.com/unknown/jira-worklog-manager-domain/issues"
Source = "https://github.com/unknown/jira-worklog-manager-domain"

[tool.hatch.version]
path = "jira_worklog_manager_domain/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=jira_worklog_manager_domain --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "jira_worklog_manager_domain/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
